# sombra-physics

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
doc/: Doxyfile.in
include/sphys/: CollisionSolver.h  RigidBody.h  RigidBodyWorld.h
include/sphys/collision/: AABB.h  BoundingBox.h  BoundingSphere.h  Capsule.h  CoarseCollisionDetector.h  Collider.h  CollisionDetector.h  CollisionMath.h  CompositeCollider.h  ConcaveCollider.h  Contact.h  ConvexCollider.h  ConvexPolyhedron.h  FineCollisionDetector.h  HACD.h  HalfEdgeMesh.h  HalfEdgeMesh.hpp  HalfEdgeMeshExt.h  HalfEdgeMeshRaycast.h  HalfEdgeMeshRaycast.hpp  Manifold.h  QuickHull.h  Ray.h  TerrainCollider.h  TriangleCollider.h  TriangleMeshCollider.h
include/sphys/constraints/: Constraint.h  ConstraintIsland.h  ConstraintManager.h  DistanceConstraint.h  FrictionConstraint.h  NormalConstraint.h
include/sphys/forces/: DirectionalForce.h  Force.h  Gravity.h  PunctualForce.h
src/sphys/: CollisionSolver.cpp  LogWrapper.h  RigidBody.cpp  RigidBodyDynamics.cpp  RigidBodyDynamics.h  RigidBodyWorld.cpp
src/sphys/collision/: AABB.cpp  AABBAVLTree.h  AABBAVLTree.hpp  BoundingBox.cpp  BoundingSphere.cpp  Capsule.cpp  CoarseCollisionDetector.cpp  CollisionDetector.cpp  CollisionMath.cpp  CompositeCollider.cpp  ConvexPolyhedron.cpp  EPACollisionDetector.cpp  EPACollisionDetector.h  FineCollisionDetector.cpp  GJKCollisionDetector.cpp  GJKCollisionDetector.h  GJKRayCaster.cpp  GJKRayCaster.h  Graph.h  Graph.hpp  HACD.cpp  HalfEdgeMesh.cpp  HalfEdgeMeshExt.cpp  Polytope.cpp  Polytope.h  QuickHull.cpp  Simplex.cpp  Simplex.h  SupportPoint.cpp  SupportPoint.h  TerrainCollider.cpp  TriangleCollider.cpp  TriangleMeshCollider.cpp
src/sphys/constraints/: ConstraintIsland.cpp  ConstraintManager.cpp  DistanceConstraint.cpp  FrictionConstraint.cpp  NormalConstraint.cpp
src/sphys/forces/: DirectionalForce.cpp  Gravity.cpp  PunctualForce.cpp
test/: CMakeLists.txt
test/sphys/: AABBTest.cpp  BoundingBoxTest.cpp  BoundingSphereTest.cpp  CapsuleTest.cpp  CoarseCollisionDetectorTest.cpp  CompositeColliderTest.cpp  ConstraintTest.cpp  ConvexPolyhedronTest.cpp  FineCollisionDetectorTest.cpp  ForceTest.cpp  HalfEdgeMeshTest.cpp  MeshGenerationTest.cpp  MeshRaycastTest.cpp  RigidBodyWorldTest.cpp  TerrainColliderTest.cpp  TestMeshes.cpp  TestMeshes.h  TriangleColliderTest.cpp  TriangleMeshColliderTest.cpp
